--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -37,6 +37,7 @@
     font-size: clamp(2.5rem, 0.878rem + 6.83vw, 6rem);
     font-weight: 300;
     text-transform: capitalize;
+    letter-spacing: 0.12em;
   }
 
   &--md-en {
@@ -44,6 +45,7 @@
     font-size: clamp(1.2rem, 0.545rem + 3.27vw, 3rem);
     font-weight: 300;
     text-transform: capitalize;
+    letter-spacing: 0.12em;
   }
 
   &--sm-en {
@@ -51,6 +53,13 @@
     font-size: clamp(1rem, 0.855rem + 0.73vw, 1.4rem);
     font-weight: 300;
     text-transform: capitalize;
+    letter-spacing: 0.12em;
+  }
+
+  &--xl-jp {
+    font-weight: 300;
+    letter-spacing: 0.2em;
+    font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
   }
 
   &--lg-jp {
