--- a/scss/pages/_page-portfolio.scss
+++ b/scss/pages/_page-portfolio.scss
@@ -1,4 +1,5 @@
 @use '../mixins' as *;
+
 .page-portfolio {
   grid-column: 1/ -1;
   width: 100%;
@@ -85,6 +86,51 @@
     }
   }
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  &-content {
+    margin: auto;
+    margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1080px;
+    padding: 0.5rem;
+    background-color: var(--color-background);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
+  }
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 30px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.toinstagram {
+  width: 100px;
+  height: auto;
+  position: fixed;
+  top: 85%;
+  left: 80%;
+  animation: fuwafuwa 3s ease-in-out infinite alternate;
+  transition: 1.5s ease-in-out;
+  z-index: 3;
+}
 
 @include mq {
   .page-portfolio {
@@ -123,39 +169,9 @@
     grid-column: 1;
     grid-row: 2;
   }
-}
 
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8);
-
-  &-content {
-    margin: auto;
-    margin-top: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 1080px;
-    padding: 0.5rem;
-    background-color: var(--color-background);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: relative;
+  .toinstagram {
+    top: 85%;
+    left: 70%;
   }
-}
-
-.close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 30px;
-  cursor: pointer;
-  color: #fff;
 }
