--- a/scss/pages/_page-about.scss
+++ b/scss/pages/_page-about.scss
@@ -101,7 +101,7 @@
     font-family: var(--font-primary);
     letter-spacing: 0.1em;
     font-weight: 300;
-    text-align: end;
+    text-align: center;
   }
 
   &__text {
