--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -152,6 +152,7 @@ main {
   cursor: pointer;
   position: relative;
   line-height: 3.5rem;
+  transition: 0.4s ease-in-out;
 }
 .button::after {
   content: ">";
@@ -159,6 +160,10 @@ main {
   top: 50%;
   right: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
   transform: translateY(-50%);
+}
+.button:hover {
+  background-color: rgba(168, 129, 91, 0.7);
+  color: #fff;
 }
 
 .button-color {
@@ -176,6 +181,11 @@ main {
   background-color: rgba(168, 129, 91, 0.7);
   cursor: pointer;
   line-height: 3.5rem;
+  transition: 0.4s ease-in-out;
+}
+.button-color:hover {
+  background-color: var(--color-background);
+  color: var(--color-primary);
 }
 
 .banner {
@@ -190,14 +200,17 @@ main {
 
 .banner-type1 {
   background-image: url("../../assets/img/banner1.webp");
+  background-position: center;
 }
 
 .banner-type2 {
   background-image: url("../../assets/img/banner2.webp");
+  background-position: bottom;
 }
 
 .banner-type3 {
   background-image: url("../../assets/img/banner3.webp");
+  background-position: center;
 }
 
 .banner-type1,
@@ -205,7 +218,6 @@ main {
 .banner-type3 {
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
   position: relative;
 }
 .banner-type1::before,
@@ -217,7 +229,7 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* ------- header ------- */
@@ -598,12 +610,24 @@ main {
   position: relative;
   width: 100%;
   height: auto;
+  background-color: rgba(255, 255, 255, 0.4);
+}
+.works-card > a {
+  transition: 0.4s linear;
+}
+.works-card > a:hover {
+  color: #fff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+.works-card > a:hover img {
+  opacity: 1;
 }
 .works-card__title {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1;
 }
 @media (max-width: 768px) {
   .works-card__title {
@@ -618,19 +642,7 @@ main {
   object-fit: cover;
   object-position: center;
   opacity: 0.4;
-  transition: opacity 0.5s ease;
-}
-@media (max-width: 768px) {
-  .works-card img {
-    opacity: 1;
-  }
-}
-.works-card:hover {
-  color: #fff;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-.works-card:hover img {
-  opacity: 1;
+  transition: 0.4s opacity linear;
 }
 
 .plan-contact {
@@ -839,7 +851,7 @@ main {
   font-family: var(--font-primary);
   letter-spacing: 0.1em;
   font-weight: 300;
-  text-align: end;
+  text-align: center;
 }
 .concept__text {
   text-align: center;
@@ -956,13 +968,11 @@ main {
 }
 
 .toinstagram {
-  width: 100px;
+  width: 86px;
   height: auto;
   position: fixed;
-  top: 85%;
-  left: 80%;
-  animation: fuwafuwa 3s ease-in-out infinite alternate;
-  transition: 1.5s ease-in-out;
+  bottom: 5%;
+  right: 2%;
   z-index: 3;
 }
 
@@ -994,8 +1004,8 @@ main {
     grid-row: 2;
   }
   .toinstagram {
-    top: 85%;
-    left: 70%;
+    bottom: 5%;
+    right: 2%;
   }
 }
 .contact {
