--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -80,6 +80,7 @@ main {
   cursor: pointer;
   position: relative;
   line-height: 3.5rem;
+  transition: 0.4s ease-in-out;
 
   &::after {
     content: '>';
@@ -87,6 +88,11 @@ main {
     top: 50%;
     right: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
     transform: translateY(-50%);
+  }
+
+  &:hover {
+    background-color: rgba(168, 129, 91, 0.7);
+    color: #fff;
   }
 }
 
@@ -105,6 +111,12 @@ main {
   background-color: rgba(168, 129, 91, 0.7);
   cursor: pointer;
   line-height: 3.5rem;
+  transition: 0.4s ease-in-out;
+
+  &:hover {
+    background-color: var(--color-background);
+    color: var(--color-primary);
+  }
 }
 
 .banner {
@@ -119,14 +131,17 @@ main {
 
 .banner-type1 {
   background-image: url('../../assets/img/banner1.webp');
+  background-position: center;
 }
 
 .banner-type2 {
   background-image: url('../../assets/img/banner2.webp');
+  background-position: bottom;
 }
 
 .banner-type3 {
   background-image: url('../../assets/img/banner3.webp');
+  background-position: center;
 }
 
 .banner-type1,
@@ -134,7 +149,6 @@ main {
 .banner-type3 {
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
   position: relative;
   &::before {
     content: '';
@@ -143,6 +157,6 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.1);
   }
 }
