--- a/scss/pages/_page-portfolio.scss
+++ b/scss/pages/_page-portfolio.scss
@@ -122,13 +122,11 @@
 }
 
 .toinstagram {
-  width: 100px;
+  width: 86px;
   height: auto;
   position: fixed;
-  top: 85%;
-  left: 80%;
-  animation: fuwafuwa 3s ease-in-out infinite alternate;
-  transition: 1.5s ease-in-out;
+  bottom: 5%;
+  right: 2%;
   z-index: 3;
 }
 
@@ -171,7 +169,7 @@
   }
 
   .toinstagram {
-    top: 85%;
-    left: 70%;
+    bottom: 5%;
+    right: 2%;
   }
 }
