--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -40,6 +40,14 @@
     letter-spacing: 0.12em;
   }
 
+  &--large-en {
+    font-family: var(--font-title-en);
+    font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
+    font-weight: 300;
+    text-transform: capitalize;
+    letter-spacing: 0.12em;
+  }
+
   &--md-en {
     font-family: var(--font-title-en);
     font-size: clamp(1.2rem, 0.545rem + 3.27vw, 3rem);
