--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,33 +30,33 @@
   font-weight: 300;
 }
 
-.font__title--lg-en {
+.font__title--xl-en {
   font-family: var(--font-title-en);
   font-size: clamp(2.5rem, 0.878rem + 6.83vw, 6rem);
   font-weight: 300;
   text-transform: capitalize;
-  letter-spacing: 0.12em;
+  letter-spacing: 0.1em;
 }
-.font__title--large-en {
+.font__title--lg-en {
   font-family: var(--font-title-en);
   font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
   font-weight: 300;
   text-transform: capitalize;
-  letter-spacing: 0.12em;
+  letter-spacing: 0.1em;
 }
 .font__title--md-en {
   font-family: var(--font-title-en);
   font-size: clamp(1.2rem, 0.545rem + 3.27vw, 3rem);
   font-weight: 300;
   text-transform: capitalize;
-  letter-spacing: 0.12em;
+  letter-spacing: 0.07em;
 }
 .font__title--sm-en {
   font-family: var(--font-title-en);
   font-size: clamp(1rem, 0.855rem + 0.73vw, 1.4rem);
   font-weight: 300;
   text-transform: capitalize;
-  letter-spacing: 0.12em;
+  letter-spacing: 0.1em;
 }
 .font__title--xl-jp {
   font-weight: 300;
@@ -168,9 +168,11 @@ main {
   right: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
   transform: translateY(-50%);
 }
-.button:hover {
-  background-color: rgba(168, 129, 91, 0.7);
-  color: #fff;
+@media (any-hover: hover) {
+  .button:hover {
+    background-color: rgba(168, 129, 91, 0.7);
+    color: #fff;
+  }
 }
 
 .button-color {
@@ -190,9 +192,11 @@ main {
   line-height: 3.5rem;
   transition: 0.4s ease-in-out;
 }
-.button-color:hover {
-  background-color: var(--color-background);
-  color: var(--color-primary);
+@media (any-hover: hover) {
+  .button-color:hover {
+    background-color: var(--color-background);
+    color: var(--color-primary);
+  }
 }
 
 .banner {
@@ -291,7 +295,7 @@ main {
   text-decoration: none;
   font-size: 20px;
   letter-spacing: 0.1em;
-  font-weight: 300;
+  font-weight: 500;
   font-family: var(--font-title-en);
   text-transform: uppercase;
 }
@@ -622,12 +626,14 @@ main {
 .works-card > a {
   transition: 0.4s linear;
 }
-.works-card > a:hover {
-  color: #fff;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-.works-card > a:hover img {
-  opacity: 1;
+@media (any-hover: hover) {
+  .works-card > a:hover {
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  }
+  .works-card > a:hover img {
+    opacity: 1;
+  }
 }
 .works-card__title {
   position: absolute;
@@ -635,12 +641,6 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-}
-@media (max-width: 768px) {
-  .works-card__title {
-    color: #fff;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  }
 }
 .works-card img {
   width: 100%;
@@ -650,6 +650,16 @@ main {
   object-position: center;
   opacity: 0.4;
   transition: 0.4s opacity linear;
+}
+@media (max-width: 768px) {
+  .works-card__title {
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    line-height: 1;
+  }
+  .works-card img {
+    opacity: 1;
+  }
 }
 
 .plan-contact {
