--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -89,10 +89,11 @@ main {
     right: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
     transform: translateY(-50%);
   }
-
-  &:hover {
-    background-color: rgba(168, 129, 91, 0.7);
-    color: #fff;
+  @media (any-hover: hover) {
+    &:hover {
+      background-color: rgba(168, 129, 91, 0.7);
+      color: #fff;
+    }
   }
 }
 
@@ -113,9 +114,11 @@ main {
   line-height: 3.5rem;
   transition: 0.4s ease-in-out;
 
-  &:hover {
-    background-color: var(--color-background);
-    color: var(--color-primary);
+  @media (any-hover: hover) {
+    &:hover {
+      background-color: var(--color-background);
+      color: var(--color-primary);
+    }
   }
 }
 
