--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -32,20 +32,20 @@
 }
 
 .font__title {
-  &--lg-en {
+  &--xl-en {
     font-family: var(--font-title-en);
     font-size: clamp(2.5rem, 0.878rem + 6.83vw, 6rem);
     font-weight: 300;
     text-transform: capitalize;
-    letter-spacing: 0.12em;
+    letter-spacing: 0.1em;
   }
 
-  &--large-en {
+  &--lg-en {
     font-family: var(--font-title-en);
     font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
     font-weight: 300;
     text-transform: capitalize;
-    letter-spacing: 0.12em;
+    letter-spacing: 0.1em;
   }
 
   &--md-en {
@@ -53,7 +53,7 @@
     font-size: clamp(1.2rem, 0.545rem + 3.27vw, 3rem);
     font-weight: 300;
     text-transform: capitalize;
-    letter-spacing: 0.12em;
+    letter-spacing: 0.07em;
   }
 
   &--sm-en {
@@ -61,7 +61,7 @@
     font-size: clamp(1rem, 0.855rem + 0.73vw, 1.4rem);
     font-weight: 300;
     text-transform: capitalize;
-    letter-spacing: 0.12em;
+    letter-spacing: 0.1em;
   }
 
   &--xl-jp {
