--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -209,11 +209,13 @@
 
   > a {
     transition: 0.4s linear;
-    &:hover {
-      color: #fff;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-      img {
-        opacity: 1;
+    @media (any-hover: hover) {
+      &:hover {
+        color: #fff;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        img {
+          opacity: 1;
+        }
       }
     }
   }
@@ -224,11 +226,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-
-    @include mq {
-      color: #fff;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    }
   }
 
   img {
@@ -239,6 +236,17 @@
     object-position: center;
     opacity: 0.4;
     transition: 0.4s opacity linear;
+  }
+
+  @include mq {
+    &__title {
+      color: #fff;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      line-height: 1;
+    }
+    img {
+      opacity: 1;
+    }
   }
 }
 
