--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -29,6 +29,10 @@
   font-size: clamp(0.75rem, 0.705rem + 0.23vw, 0.875rem);
   font-weight: 300;
 }
+.font__body--xxs {
+  font-size: clamp(0.6rem, 0.5rem + 0.5vw, 0.875rem);
+  font-weight: 300;
+}
 
 .font__title--xl-en {
   font-family: var(--font-title-en);
@@ -39,21 +43,21 @@
 }
 .font__title--lg-en {
   font-family: var(--font-title-en);
-  font-size: clamp(2rem, 1.636rem + 1.82vw, 3rem);
+  font-size: clamp(1.4rem, 0.818rem + 2.91vw, 3rem);
   font-weight: 300;
   text-transform: capitalize;
   letter-spacing: 0.1em;
 }
 .font__title--md-en {
   font-family: var(--font-title-en);
-  font-size: clamp(1.2rem, 0.545rem + 3.27vw, 3rem);
+  font-size: clamp(1rem, 0.636rem + 1.82vw, 2rem);
   font-weight: 300;
   text-transform: capitalize;
   letter-spacing: 0.07em;
 }
 .font__title--sm-en {
   font-family: var(--font-title-en);
-  font-size: clamp(1rem, 0.855rem + 0.73vw, 1.4rem);
+  font-size: clamp(0.9rem, 0.718rem + 0.91vw, 1.4rem);
   font-weight: 300;
   text-transform: capitalize;
   letter-spacing: 0.1em;
@@ -125,6 +129,15 @@ main {
   grid-template-columns: minmax(2rem, 1fr) minmax(auto, 1168px) minmax(2rem, 1fr);
 }
 
+.sp-br {
+  display: none;
+}
+@media (max-width: 768px) {
+  .sp-br {
+    display: block;
+  }
+}
+
 /*  ------- svg ------- */
 #icon-instagram {
   width: 20px;
@@ -165,7 +178,7 @@ main {
   content: ">";
   position: absolute;
   top: 50%;
-  right: clamp(0.8rem, 0.364rem + 2.18vw, 2rem);
+  right: clamp(0.25rem, -0.386rem + 3.18vw, 2rem);
   transform: translateY(-50%);
 }
 @media (any-hover: hover) {
@@ -743,7 +756,7 @@ main {
   gap: 0.5rem;
 }
 .prev-next__item svg {
-  height: 1rem;
+  height: clamp(0.8rem, 0.727rem + 0.36vw, 1rem);
   width: auto;
 }
 
@@ -861,7 +874,6 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 2rem;
-  justify-self: center;
 }
 .concept__title {
   font-size: clamp(1.25rem, 0.541rem + 3.55vw, 3.2rem);
@@ -871,7 +883,6 @@ main {
   text-align: center;
 }
 .concept__text {
-  text-align: center;
   line-height: 1.5;
 }
 
